# subtitle

./: .gitignore  Makefile  main.py  out.txt  pyproject.toml  test.py
prompts/: prompt000.txt  prompt001.txt  prompt002.txt  prompt003.txt  prompt004.txt  prompt005.txt  prompt006.txt  prompt007.txt
